Fix logo align and rename light

--- a/src/css/Popup.css
+++ b/src/css/Popup.css
@@ -50,6 +50,7 @@ CONTENTS:
 }
 
 .img-container {
+    text-align: left;
     width: 50%;
     height: 50%;
     margin-left: 25%;
